# Homework_Progra_V

./: .gitignore  README.md
Ycombinator/: Ycombinator_example.hs
app/: Main.hs
exercises_book/: exercises.txt
feb_26/: split.hs
hanoi/: hanoi.cabal
hanoi/src/: Lib.hs
test/: Spec.hs
test_feb_27/: test.hs
