cabal-version: 3.0

name:           hanoi
version:        0.1.0.0
author:         Diego Michel Rocca
maintainer:     aa6132788@gmail.com
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/DMichelR/hanoi

common not-lib-configuration
    ghc-options:        -threaded 
                                -rtsopts 
                                -with-rtsopts=-N
    build-depends:      hanoi

common configuration
    build-depends:      base
    default-language:  Haskell2010

library
  import: configuration
  exposed-modules:
      Lib
  hs-source-dirs:
      src

executable hanoi-exe
  import: configuration, not-lib-configuration
  main-is: Main.hs
  hs-source-dirs:
      app

test-suite hanoi-test
  import: configuration, not-lib-configuration
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends: QuickCheck
